fixed alignment issue

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -175,6 +175,7 @@ body {
     display: flex; 
     flex-direction: row;
     justify-content: center;
+    max-width: 87px; 
 }
 
 .input-hide {
